[tool.poetry]
name = "dagster-poc"
version = "0.1.0"
description = ""
authors = ["Todor Lubenov <tlubenov@gmail.com>"]
readme = "README.md"
packages = [{include = "data_facts"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.4.5"
dagit = "^1.4.5"
dagster-postgres = "^0.20.5"
dagster-webserver = "^1.4.5"
dagster-airbyte = "^0.20.5"
pandas = "2.0.3"
numpy = "1.24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
